Bug 518463 - Alternative APIs to JS_GetStringBytes/Chars with saner out-of-memory handling. Any code using the old APIs that attempts to handle OOM at all should switch to these. r=brendan.